<resources>
    <string name="app_name">ZekrShomar</string>

    <string name="action_settings">تنظیمات</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navView_tools">ابزار ها</string>
    <string name="navView_zekrs">ذکر ها</string>
    <string name="zekr404">ذکر مورد نظر یافت نشد</string>
    <string name="errorInDB">خطا در بارگذاری اطلاعات</string>
    <string name="zekrName">نام ذکر</string>
    <string name="zekrCount">تعداد ذکر</string>
    <string name="title_activity_settings">تنظیمات</string>

    <!-- Strings related to Settings -->
    <string name="settings_swipe">حرکات دست</string>

    <string name="settings_swipe_title_left">حرکت دست به چپ</string>
    <string name="settings_swipe_title_right">حرکت دست به راست</string>
    <string name="settings_swipe_title_up">حرکت دست به بالا</string>
    <string name="settings_swipe_title_down">حرکت دست به پایین</string>

    <string-array name="settings_swipe_titles">
        <item>افزایش</item>
        <item>کاهش</item>
        <item>هیچ</item>
    </string-array>
    <string-array name="settings_swipe_values">
        <item>1</item>
        <item>-1</item>
        <item>0</item>
    </string-array>

    <string name="settings_swipe_defaultVal_left">1</string>
    <string name="settings_swipe_defaultVal_right">-1</string>
    <string name="settings_swipe_defaultVal_up">0</string>
    <string name="settings_swipe_defaultVal_down">0</string>

    <string name="settings_swipe_key_left">swipe_left</string>
    <string name="settings_swipe_key_right">swipe_right</string>
    <string name="settings_swipe_key_up">swipe_up</string>
    <string name="settings_swipe_key_down">swipe_down</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_counter">شمارشگر</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_sound">صوت</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
